--- a/src/pages/home/homeHeader/style.css
+++ b/src/pages/home/homeHeader/style.css
@@ -7,15 +7,17 @@
 }
 
 .home-header-left {
-  display: inline-block;
+  display: flex;
   width: 60px;
+  height: 100%;
   margin-left: 10px;
   color: white;
 }
 
 .home-header-left i {
-  display: inline-block;
   margin-left: 3px;
+  margin-top: 1px;
+  font-size: 15px;
 }
 
 .home-header-right {
@@ -32,17 +34,4 @@
   margin-left: 8px;
 }
 
-.middle-container {
-  display: flex;
-}
-.home-header-middle i {
-  flex: 1;
-  float: left;
-}
-.home-header-middle input {
-  flex: 9;
-  border: none;
-  /*  去除选中状态边框 */
-  outline: none;
-  font-size: 18px;
-}
+
